# data-fair

./: .cache-require-paths.json  .dockerignore  .eslintignore  .eslintrc.js  .gitignore  .mcp.json  .nycrc  .travis.yml  .zellij.kdl  200.html  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  bs-config.js  docker-compose-proxy.yaml  docker-compose.yaml  docker-compose.yml  eslint.config.mjs  index.html  jsconfig.json  nodemon.json  nuxt-config-inject.js  nuxt.config.cjs  nuxt.config.js  package-lock.json  package.json  playwright.config.ts  semester-of-code.md  skills-lock.json  test-loop.sh  tsconfig.json  webpack.config.js
.claude/: settings.json
.husky/: pre-commit  pre-push
.nuxt/: App.js  client.js  index.js  router.js  routes.json  server.js  store.js  utils.js
.nyc_output/: 1358057f-02c2-46f9-991f-d59c8c574204.json  1933ff42-743c-4b1a-99d8-4cbbbbacdef3.json  242b37c3-9adb-4407-81ef-fd4752aa1979.json  25cdb816-ab72-49c7-b60e-b851b960240d.json  308dab71-31a4-4c58-9784-904a2e955771.json  3265272b-feb0-4683-a445-349ab7b5b5e5.json  32f0836f-2be4-4254-920f-f3bdb160fa9e.json  49d218dc-3703-401e-9aef-98b0672baa0a.json  4c27cdb2-5d38-458e-b5a3-bbe828ce7655.json  52e63441-d5b0-4629-8656-6bc8b5cabac4.json  (+25 more)
2/: 200.html  (+1 more)
parquet-exporter/: Cargo.toml  index.cjs  index.d.ts  package.json
parquet-exporter/src/: buffer_stream_writer.rs  lib.rs  parquet_exporter.rs  schema.rs
parquet-writer/: Cargo.toml  index.d.ts  index.js  package.json  parquet-writer-stream.mts
parquet-writer/src/: arrow.rs  buffer_writer.rs  lib.rs  parquet_writer.rs  schema.rs
(+38247 files in other folders)
