[package]
name = "data-fair-parquet-exporter"
version = "0.0.0"
license = "ISC"
edition = "2024"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = { version = "1.1.1", features = ['external-buffers', 'napi-4'] }
parquet = { version = "56.2.0" }