
[package]
authors = ["Alban Mouton <alban.mouton@koumoul.com>"]
edition = "2021"
name = "data_fair_parquet_writer"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"
parquet = "56.2.0"
arrow = {version = "56.2.0", features = []}
arrow-schema = "56.2.0"
arrow-array = "56.2.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
